Extract tags dock logic to its own class

--- a/gui/src/main-window.ui
+++ b/gui/src/main-window.ui
@@ -127,8 +127,8 @@
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="dockInternetLayout">
-    <layout class="QVBoxLayout" name="verticalLayout">
+   <widget class="QWidget" name="dockTagsContents">
+    <layout class="QVBoxLayout" name="dockTagsLayout">
      <property name="leftMargin">
       <number>0</number>
      </property>
@@ -141,70 +141,6 @@
      <property name="bottomMargin">
       <number>0</number>
      </property>
-     <item>
-      <widget class="QScrollArea" name="dockInternetScroll">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
-       <property name="widgetResizable">
-        <bool>true</bool>
-       </property>
-       <widget class="QWidget" name="dockInternetScrollLayout_2">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>68</width>
-          <height>45</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="dockInternetScrollLayout_1">
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <item>
-          <spacer name="verticalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <layout class="QVBoxLayout" name="dockInternetScrollLayout">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-          </layout>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_4">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </widget>
-      </widget>
-     </item>
     </layout>
    </widget>
   </widget>
@@ -523,7 +459,6 @@
  </customwidgets>
  <tabstops>
   <tabstop>tabWidget</tabstop>
-  <tabstop>dockInternetScroll</tabstop>
  </tabstops>
  <resources>
   <include location="../resources/resources.qrc"/>
@@ -685,7 +620,7 @@
     </hint>
     <hint type="destinationlabel">
      <x>39</x>
-     <y>136</y>
+     <y>261</y>
     </hint>
    </hints>
   </connection>
