Fix settings dock width being too big

--- a/gui/src/docks/settings-dock.ui
+++ b/gui/src/docks/settings-dock.ui
@@ -10,6 +10,12 @@
     <height>120</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="maximumSize">
    <size>
     <width>16777214</width>
