Rename favorites 'Note' by 'Priority' (fix #1969)

--- a/gui/src/docks/favorites-dock.ui
+++ b/gui/src/docks/favorites-dock.ui
@@ -39,7 +39,7 @@
      </item>
      <item>
       <property name="text">
-       <string>Note</string>
+       <string>Priority</string>
       </property>
      </item>
      <item>
