--- a/gui/src/tabs/favorites-tab.ui
+++ b/gui/src/tabs/favorites-tab.ui
@@ -82,7 +82,7 @@
            </item>
            <item>
             <property name="text">
-             <string>Note</string>
+             <string>Priority</string>
             </property>
            </item>
            <item>
