--- a/src/gui/src/monitor-window.ui
+++ b/src/gui/src/monitor-window.ui
@@ -189,6 +189,13 @@
          </property>
         </widget>
        </item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QCheckBox" name="checkGetBlacklisted">
+         <property name="text">
+          <string>Download blacklisted images</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
