--- a/src/gui/src/tabs/monitors-tab.ui
+++ b/src/gui/src/tabs/monitors-tab.ui
@@ -31,7 +31,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
    <item>
-    <widget class="QTableView" name="tableMonitors">
+    <widget class="ToggleColumnsTableView" name="tableMonitors">
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
@@ -42,6 +42,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ToggleColumnsTableView</class>
+   <extends>QTableView</extends>
+   <header>ui/toggle-columns-table-view.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../../resources/resources.qrc"/>
  </resources>
