Add more hidden columns for the monitors (issue #1991)
- Post-filters
- Last check
- Next check

--- a/src/gui/src/tabs/monitors-tab.ui
+++ b/src/gui/src/tabs/monitors-tab.ui
@@ -35,6 +35,12 @@
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
+     <property name="horizontalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
      <property name="sortingEnabled">
       <bool>true</bool>
      </property>
