Update 'Edit this page' link in docs

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -8,7 +8,7 @@ class: docs
 		<h1>{{ page.title }}</h1>
 
 		<ul class="nav navbar-nav navbar-right navbar-bottom">
-			<li><a href="{{site.github.repository_url}}/blob/gh-pages/{{page.path}}">Edit this page</a></li>
+			<li><a href="{{site.github.repository_url}}/blob/master/docs/{{page.path}}">Edit this page</a></li>
 		</ul>
 	</div>
 {% endcapture %}
