--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -5,7 +5,7 @@ class: docs
 
 {%capture header %}
 	<div class="head">
-		<h1>{{ page.title }}</h1>
+		<h1>{{ layout.forced_title | default: page.title }}</h1>
 
 		<ul class="nav navbar-nav navbar-right navbar-bottom">
 			<li><a href="{{site.github.repository_url}}/blob/master/docs/{{page.path}}">Edit this page</a></li>
